web/book/tests/documentation/snapshots/documentation__book__transforms__aggregate__examples__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\naggregate {\n  average salary,\n  ct = count salary\n}\n"
---
SELECT
  AVG(salary),
  COUNT(salary) AS ct
FROM
  employees

